FIX: Align css to reflect AA media queries long practice Bonus Phase requirements

--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -91,3 +91,9 @@
 	width: unset;
     }
 }
+@media print and (orientation: portrait) {
+    .timeline-scroll-area {
+	font-size: 0.5;
+	/* width: 200%; */
+    }
+}
